[package]
name = "easy_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
ring = "*"
data-encoding = "*"
crossterm = "*"
itertools = "*"
colored = "2.0"
thiserror = "1.0"
